[package]
name = "wow_vanilla_dbc"
version = "0.1.1" # Remember to update docs in src/lib.rs and README.md
edition = "2021"
description = "Deprecated, use wow_dbc instead."
license = "MIT OR Apache-2.0"
repository = "https://www.github.com/gtker/wow_vanilla_dbc"
keywords = ["wow", "world-of-warcraft", "mpq", "dbc", "databaseclient"]
categories = ["games", "game-development", "game-engines", "parser-implementations"]
readme = "README.md"
authors = ["Gtker <github@gtker.com"]

